--- a/css/divs.css
+++ b/css/divs.css
@@ -1,5 +1,7 @@
 #cabecera {
-    background-color: #949494;
+    position: absolute;
+    background-color: #656565;
+    color: black;
     width: 100%;
     height: 25%;
 }
