--- a/css/divs.css
+++ b/css/divs.css
@@ -1,7 +1,17 @@
-#cabecera {
-    position: absolute;
-    background-color: #656565;
-    color: black;
+.cabecera {
+    position: relative;
+    background-color: #1E2372;
     width: 100%;
-    height: 25%;
+    min-height: 13%;
+    top: 0px;
+    left: 0px;
+    margin: 0;
+}
+
+.intro{
+    position: relative;
+    background-color: #ACACAC;
+    width: 100%;
+    min-height: 500px;
+    margin: 0;
 }
