--- a/css/text.css
+++ b/css/text.css
@@ -1,7 +1,7 @@
 .h1{
     position: absolute;
     font-family: Tahoma;
-    color: #00FF09;
+    color: #1E2372;
     font-size: 10vh;
     text-align: left;
     margin: 0;
@@ -13,51 +13,43 @@
 .h2{
     position: absolute;
     font-family: Arial;
-    color: #00FF09;
+    color: #1E2372;
     font-size: 5vh;
     text-align: left;
     margin: 0px;
     line-height: 0.8;
-    box-sizing: border-box;
-}
-#h2_1{
-    top: 3vh;
-    left: 35vh;
 }
 .titulo{
     position: absolute;
     font-family: Helvetica;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 3vh;
     color: #1E2372;
-    box-sizing: border-box;
-}
-#t1{
-    left: 1vh;
+    margin: 5px;
     top: 0;
+    left: 0;
 }
 .subtitulo{
     position: absolute;
     font-family: Helvetica;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 2vh;
     color: #1E2372;
-    box-sizing: border-box;
-}
-#st2{
-    left: 1vh;
-    top: 15vh;
+    margin: 5px;
+    top: 0;
+    left: 0;
 }
 .parrafo{
     position: absolute;
     font-family: Helvetica;
-    font-size: 20px;
-    color: #666666;
+    font-size: 2vh;
+    color: #737373;
     text-align: justify;
-    margin-right: 1vh;
-    box-sizing: border-box;
+    margin: 5px;
+    top: 0;
+    left: 0;
 }
-#p1{
-    left: 1vh;
-    top: 6vh;
+#h2_1{
+    top: 3vh;
+    left: 37vh;
 }
